<resources>
    <string name="app_name">My Application Dicoding</string>
    <string name="club_name">Club Name</string>
    <string name="club_from">Club From</string>
    <string name="club_league">Club League</string>
    <string name="about">About</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="league">League</string>
    <string name="from">From</string>
    <string name="name">Name</string>
    <string name="creator_name">Ahmad Zaky W</string>
    <string name="creator_email">azakyw@gmail.com</string>
</resources>
