<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"

                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/img_photo_club_2"
                    android:layout_margin="@dimen/horizontal_margin"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="@string/name"
                    style="@style/Text"
                    android:id="@+id/item_club_name_2"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="@string/from"
                    style="@style/Text"
                    android:id="@+id/item_club_from_2"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="@string/league"
                    style="@style/Text"
                    android:id="@+id/item_club_league_2"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:text="@string/deskripsi"
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:textColor="#000000"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"/>


    </LinearLayout>



</FrameLayout>